ansible/playbooks/files/k8s-manifests/online-boutique-am/0.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-boutique-am
  labels:
    istio-injection: enabled
