ansible/playbooks/files/k8s-manifests/online-boutique-am/2.frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: online-boutique-am
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "online-boutique-am.f5-udf.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
  namespace: online-boutique-am
spec:
  hosts:
  - "online-boutique-am.f5-udf.com"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: frontend
#  namespace: online-boutique-am
#spec:
#  hosts:
#  - "frontend.default.svc.cluster.local"
#  http:
#  - route:
#    - destination:
#        host: frontend
#        port:
#          number: 80
